@@ -1,4 +1,9 @@
-﻿[B]1.0.15[/B]
+﻿[B]1.0.16[/B]
+- Sorozat kezelés javítása
+- Évszám szerinti listázás
+- Kezdőbetű szerinti listázás
+
+[B]1.0.15[/B]
 - Forrás változás követése
 
 [B]1.0.14[/B]
